--- a/Pick Up: Basketball/Base.lproj/LaunchScreen.storyboard
+++ b/Pick Up: Basketball/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,7 +18,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoHD" translatesAutoresizingMaskIntoConstraints="NO" id="Mvv-sF-1hw">
+                                <rect key="frame" x="186" y="186" width="228" height="228"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.01790791421" green="0.018131583239999999" blue="0.018309294869999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="Mvv-sF-1hw" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="1k7-0d-R1G"/>
+                            <constraint firstItem="Mvv-sF-1hw" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="F79-Ov-BeI"/>
+                            <constraint firstItem="Mvv-sF-1hw" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.38" id="VNV-iX-0EC"/>
+                            <constraint firstItem="Mvv-sF-1hw" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.38" id="b73-0y-YHy"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +37,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="LogoHD" width="320" height="320"/>
+    </resources>
 </document>
