-Fixed Recent and Friends Feed Auto-layout constraints

--- a/Pick Up: Basketball/Base.lproj/Main.storyboard
+++ b/Pick Up: Basketball/Base.lproj/Main.storyboard
@@ -272,13 +272,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bird Lakes Park" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rVM-R8-6YR">
-                                                    <rect key="frame" x="203" y="18" width="80" height="21"/>
+                                                    <rect key="frame" x="201" y="18" width="80" height="21"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="checked into" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="TFT-Bp-v56">
-                                                    <rect key="frame" x="126" y="22" width="75" height="15"/>
+                                                    <rect key="frame" x="126" y="22" width="73" height="15"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -312,7 +312,7 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="2bi-9y-aJA" firstAttribute="top" secondItem="WML-QA-FnO" secondAttribute="bottom" constant="-5" id="1c1-Vm-ymH"/>
-                                                <constraint firstItem="TFT-Bp-v56" firstAttribute="leading" secondItem="qUb-Lp-8Fw" secondAttribute="trailing" constant="62" id="3Aa-tb-Bd5"/>
+                                                <constraint firstItem="rVM-R8-6YR" firstAttribute="leading" secondItem="TFT-Bp-v56" secondAttribute="trailing" constant="2" id="2Hu-dd-Enb"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="F5L-gE-CRq" secondAttribute="trailing" constant="135" id="8g3-DR-oXd"/>
                                                 <constraint firstItem="zJj-ZR-Jit" firstAttribute="trailing" secondItem="1AN-QV-8eQ" secondAttribute="trailingMargin" id="ALX-Re-BSM"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="zJj-ZR-Jit" secondAttribute="bottom" constant="43" id="BHp-JR-y9i"/>
@@ -320,12 +320,13 @@
                                                 <constraint firstItem="qUb-Lp-8Fw" firstAttribute="top" secondItem="1AN-QV-8eQ" secondAttribute="topMargin" constant="6" id="EZp-5B-cq4"/>
                                                 <constraint firstItem="F5L-gE-CRq" firstAttribute="top" secondItem="WML-QA-FnO" secondAttribute="bottom" constant="-5" id="IB8-Ap-kQh"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="rVM-R8-6YR" secondAttribute="bottom" constant="27" id="KrT-H7-lbw"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="rVM-R8-6YR" secondAttribute="trailing" constant="29" id="MaG-Ws-Qfg"/>
                                                 <constraint firstItem="2bi-9y-aJA" firstAttribute="bottom" secondItem="1AN-QV-8eQ" secondAttribute="bottomMargin" id="Peg-KQ-omx"/>
                                                 <constraint firstItem="TFT-Bp-v56" firstAttribute="top" secondItem="1AN-QV-8eQ" secondAttribute="topMargin" constant="14" id="RGe-yA-2GM"/>
                                                 <constraint firstItem="zJj-ZR-Jit" firstAttribute="top" secondItem="1AN-QV-8eQ" secondAttribute="topMargin" id="Z93-GU-Vf7"/>
                                                 <constraint firstItem="TFT-Bp-v56" firstAttribute="leading" secondItem="WML-QA-FnO" secondAttribute="trailing" constant="-4" id="baf-fK-4te"/>
                                                 <constraint firstItem="2bi-9y-aJA" firstAttribute="leading" secondItem="qUb-Lp-8Fw" secondAttribute="trailing" constant="8" id="d9s-3D-Fu2"/>
+                                                <constraint firstItem="rVM-R8-6YR" firstAttribute="leading" secondItem="TFT-Bp-v56" secondAttribute="trailing" constant="2" id="fRn-vO-z9q"/>
+                                                <constraint firstItem="TFT-Bp-v56" firstAttribute="leading" secondItem="2bi-9y-aJA" secondAttribute="trailing" constant="24" id="gPV-HO-aLK"/>
                                                 <constraint firstItem="F5L-gE-CRq" firstAttribute="leading" secondItem="2bi-9y-aJA" secondAttribute="trailing" constant="24" id="j68-Ph-sbI"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="qUb-Lp-8Fw" secondAttribute="bottom" constant="7" id="nYK-yt-JOa"/>
                                                 <constraint firstItem="qUb-Lp-8Fw" firstAttribute="leading" secondItem="1AN-QV-8eQ" secondAttribute="leadingMargin" constant="11" id="p1L-nS-bwu"/>
@@ -522,7 +523,6 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="gdO-3t-xyc" firstAttribute="top" secondItem="etM-YP-FPn" secondAttribute="topMargin" constant="10" id="3f7-VS-mqT"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="2lY-Pv-SgY" secondAttribute="trailing" constant="26" id="CH1-uF-yfl"/>
                                                 <constraint firstItem="bk2-GZ-Fp5" firstAttribute="leading" secondItem="Sa3-8c-24i" secondAttribute="trailing" constant="8" id="CRT-zS-uGl"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="Sa3-8c-24i" secondAttribute="bottom" constant="15" id="Gbw-UH-eed"/>
                                                 <constraint firstItem="kTQ-sK-rCd" firstAttribute="leading" secondItem="gdO-3t-xyc" secondAttribute="trailing" constant="8" id="Gvs-p4-nM2"/>
@@ -530,6 +530,7 @@
                                                 <constraint firstItem="bk2-GZ-Fp5" firstAttribute="top" secondItem="kTQ-sK-rCd" secondAttribute="bottom" constant="7" id="IxJ-t2-2X5"/>
                                                 <constraint firstItem="2lY-Pv-SgY" firstAttribute="leading" secondItem="kTQ-sK-rCd" secondAttribute="trailing" constant="8" id="NpJ-ky-KQw"/>
                                                 <constraint firstItem="Sa3-8c-24i" firstAttribute="leading" secondItem="etM-YP-FPn" secondAttribute="leadingMargin" id="R5Q-IA-RO1"/>
+                                                <constraint firstItem="Wui-Tw-k2d" firstAttribute="leading" secondItem="Sa3-8c-24i" secondAttribute="trailing" constant="8" id="Ur9-E2-rWd"/>
                                                 <constraint firstItem="Wui-Tw-k2d" firstAttribute="top" secondItem="etM-YP-FPn" secondAttribute="topMargin" constant="11" id="VeF-Jv-f9c"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="bk2-GZ-Fp5" secondAttribute="bottom" constant="7" id="aSC-QC-G3l"/>
                                                 <constraint firstItem="Sa3-8c-24i" firstAttribute="top" secondItem="etM-YP-FPn" secondAttribute="topMargin" constant="8" id="gzQ-de-JVl"/>
