--- a/Pick Up Basketball/Base.lproj/Main.storyboard
+++ b/Pick Up Basketball/Base.lproj/Main.storyboard
@@ -53,25 +53,25 @@
                                     <outlet property="delegate" destination="pzM-Zr-Tf0" id="cAH-tV-0Hj"/>
                                 </connections>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ih-CJ-gTi">
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ih-CJ-gTi">
                                 <rect key="frame" x="63" y="350" width="99" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="1Ih-CJ-gTi" secondAttribute="height" multiplier="33:10" id="mEi-vt-5c3"/>
                                 </constraints>
                                 <state key="normal" title="Login">
-                                    <color key="titleColor" red="0.99773637820000005" green="0.99773637820000005" blue="0.99773637820000005" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="show" id="ps0-Uy-V78"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fK2-sV-29v">
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fK2-sV-29v">
                                 <rect key="frame" x="160" y="350" width="100" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="fK2-sV-29v" secondAttribute="height" multiplier="10:3" id="Xxz-sr-9LC"/>
                                 </constraints>
                                 <state key="normal" title="Signup">
-                                    <color key="titleColor" red="0.99773637820000005" green="0.99773637820000005" blue="0.99773637820000005" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UDD-Ob-Ucm" customClass="FBSDKLoginButton">
@@ -198,10 +198,16 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <containerView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JcS-md-Tky">
+                            <containerView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JcS-md-Tky">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="573"/>
                                 <connections>
                                     <segue destination="dpI-dt-iyM" kind="embed" id="Hwr-XR-eXH"/>
+                                </connections>
+                            </containerView>
+                            <containerView hidden="YES" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Po0-rQ-WR6">
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                                <connections>
+                                    <segue destination="hCq-DR-UwU" kind="embed" id="H8G-ym-R0s"/>
                                 </connections>
                             </containerView>
                         </subviews>
@@ -244,7 +250,8 @@
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="friendsViewContainer" destination="XGe-BM-Sff" id="MD2-Ls-zPe"/>
+                        <outlet property="friendsListViewContainer" destination="Po0-rQ-WR6" id="sTr-kG-K6N"/>
+                        <outlet property="friendsViewContainer" destination="XGe-BM-Sff" id="B1R-Ix-0Mt"/>
                         <outlet property="hotspotsViewContainer" destination="sLp-4f-f1g" id="CYL-aI-BHD"/>
                         <outlet property="navbar" destination="1mc-nv-cuY" id="SUf-um-YKI"/>
                         <outlet property="pageControl" destination="XT2-22-JUg" id="5rw-6l-iZL"/>
@@ -686,7 +693,8 @@
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="bts-OJ-RuK">
-                                        <rect key="frame" x="0.0" y="106" width="240" height="34"/>
+                                        <rect key="frame" x="0.0" y="106" width="240" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="Friends">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -722,7 +730,7 @@
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="aMW-oa-FwF">
-                                        <rect key="frame" x="0.0" y="142" width="240" height="40"/>
+                                        <rect key="frame" x="0.0" y="144" width="240" height="40"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="Messages" image="messageIcon">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -793,6 +801,93 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ozc-Kj-1QQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="140" y="-572.5"/>
+        </scene>
+        <!--Friends List View Controller-->
+        <scene sceneID="qMK-zY-5xL">
+            <objects>
+                <viewController id="hCq-DR-UwU" customClass="FriendsListViewController" customModule="Pick_Up__Basketball" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YLN-E4-Uoj"/>
+                        <viewControllerLayoutGuide type="bottom" id="ube-Nd-yny"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="H0E-ct-Nue">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="75" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="StL-0a-JCb">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="509"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" red="0.36942909779999999" green="0.2801597831" blue="0.54459134620000005" alpha="1" colorSpace="calibratedRGB"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationWidth="0.0" reuseIdentifier="friendCell" rowHeight="75" id="ina-mI-mKx" customClass="FriendCell" customModule="Pick_Up__Basketball" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="75"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ina-mI-mKx" id="0MJ-fj-NWz">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" misplaced="YES" text="Chris Vila" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OmX-WL-bYb">
+                                                    <rect key="frame" x="72" y="21" width="50" height="18"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sZB-Rx-8Dm">
+                                                    <rect key="frame" x="19" y="14" width="45" height="45"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="sZB-Rx-8Dm" secondAttribute="height" multiplier="1:1" id="s2K-6d-zTA"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Rep" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mLH-gc-CH8">
+                                                    <rect key="frame" x="286" y="8" width="26" height="15"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                    <color key="textColor" red="0.36942909779999999" green="0.2801597831" blue="0.54459134620000005" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" fixedFrame="YES" text="Not Checked In" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xSP-h0-utS">
+                                                    <rect key="frame" x="72" y="41" width="79" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                    <color key="textColor" red="0.36942909779999999" green="0.2801597831" blue="0.54459134620000005" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="sZB-Rx-8Dm" firstAttribute="top" secondItem="0MJ-fj-NWz" secondAttribute="topMargin" constant="6" id="24G-Fz-NWx"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="mLH-gc-CH8" secondAttribute="bottom" constant="43" id="7Ub-Ym-UKw"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="sZB-Rx-8Dm" secondAttribute="bottom" constant="7" id="7aY-TJ-Qxi"/>
+                                                <constraint firstItem="OmX-WL-bYb" firstAttribute="leading" secondItem="sZB-Rx-8Dm" secondAttribute="trailing" constant="8" id="Ern-CR-tvI"/>
+                                                <constraint firstItem="mLH-gc-CH8" firstAttribute="trailing" secondItem="0MJ-fj-NWz" secondAttribute="trailingMargin" id="Etf-VT-mAb"/>
+                                                <constraint firstItem="mLH-gc-CH8" firstAttribute="top" secondItem="0MJ-fj-NWz" secondAttribute="topMargin" id="Pwp-zf-SwB"/>
+                                                <constraint firstItem="sZB-Rx-8Dm" firstAttribute="leading" secondItem="0MJ-fj-NWz" secondAttribute="leadingMargin" constant="11" id="lfu-3V-Vrz"/>
+                                                <constraint firstItem="OmX-WL-bYb" firstAttribute="top" secondItem="0MJ-fj-NWz" secondAttribute="topMargin" constant="13" id="sem-DD-tGl"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <connections>
+                                            <outlet property="friendLocation" destination="xSP-h0-utS" id="JxR-3L-6fo"/>
+                                            <outlet property="friendName" destination="OmX-WL-bYb" id="TUM-pM-mGD"/>
+                                            <outlet property="friendPicture" destination="sZB-Rx-8Dm" id="zOa-KW-VKk"/>
+                                            <outlet property="friendRep" destination="mLH-gc-CH8" id="Eq2-Na-cJQ"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <sections/>
+                                <connections>
+                                    <outlet property="dataSource" destination="hCq-DR-UwU" id="dwm-2D-O7K"/>
+                                    <outlet property="delegate" destination="hCq-DR-UwU" id="rjR-8h-TRo"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="friendsTableView" destination="StL-0a-JCb" id="ofK-xh-u39"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Eei-nm-2xP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-13" y="669"/>
         </scene>
     </scenes>
     <resources>
